--- a/package.json
+++ b/package.json
@@ -3,11 +3,13 @@
   "private": true,
   "version": "0.0.0",
   "type": "module",
+  "homepage": "https://appwtwr.jumpingcrab.com",
   "scripts": {
     "dev": "vite --open",
     "build": "vite build",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "deploy": "npm run build && scp -r ./dist/* g29rrios@appwtwr.jumpingcrab.com:/home/g29rrios/frontend"
   },
   "dependencies": {
     "react": "^18.3.1",
